@startuml NEA
skinparam classAttributeIconSize 0
skinparam classFontSize 16
skinparam classFontName Trebuchet MS
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #585858
skinparam classArrowColor #585858
skinparam wrapWidth 400
skinparam RoundCorner 0
skinparam DefaultFontName Trebuchet MS
skinparam DefaultFontSize 16
skinparam ClassFontSize 16
skinparam TitleFontSize 20
skinparam ClassAttributeFontSize 12
skinparam Dpi 300
skinparam svgAntiAlias true
skinparam Linetype ortho
skinparam Nodesep 50
skinparam ranksep 50

top to bottom direction

title Classes.Data

namespace Classes {
    namespace Data {
        class dbConstants
        class Game
        class GameRepository implements IGameRepository
        class Message
        class MessageRepository implements IMessageRepository
        class Statistic
        class StatisticsRepository implements IStatisticsRepository
        class UserRepository implements IUserRepository
        interface IGameRepository
        interface IMessageRepository
        interface IStatisticsRepository
        interface IUserRepository
    }
}

Classes.Data.GameRepository o-- Classes.Data.Game
Classes.Data.GameRepository o-- Classes.Data.dbConstants
Classes.Data.MessageRepository o-- Classes.Data.Message
Classes.Data.MessageRepository o-- Classes.Data.dbConstants
Classes.Data.StatisticsRepository o-- Classes.Data.dbConstants
Classes.Data.StatisticsRepository o-- Classes.Data.Statistic
Classes.Data.UserRepository o-- Classes.Data.dbConstants
Classes.Data.UserRepository o-- Classes.Data.Statistic
Classes.Data.UserRepository o-- Classes.Utilities.SecurityUtilities

hide members
@enduml